# StudyWise

./: .gitignore  README.md  roadmap.md  summary.md  技术栈.md
backend/: .env.example  models.example.json  pyproject.toml
backend/app/: db.py  db_migrations.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  conversations.py  documents.py  images.py  pages.py  projects.py
backend/app/core/: config.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: chat.py  conversation.py  document.py  project.py
backend/app/services/: conversation_page_context.py  document_parser.py  document_processing.py  paddleocr_service.py  page_content_store.py  pdf_service.py  study_content_service.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  openai_responses_provider.py  profiles.py
backend/app/services/llm/tools/: __init__.py  base.py  page_image.py
backend/examples/: paddleOCRexample.py
backend/scripts/: backfill_image_useful.py
backend/tests/: test_chat_prompt.py  test_conversation_page_context.py  test_conversations.py  test_db_migrations.py  test_document_parsing.py  test_documents.py  test_llm.py  test_llm_tools.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: SplitView.tsx
frontend/src/components/pdf/: PdfPane.css  (+1 more)
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx  StudyPage.tsx
frontend/src/stores/: useSettingsStore.ts  useStudyStore.ts
(+3 files in other folders)
